@@ -14,10 +14,10 @@ namespace Pandora {
 		public:
 			UDP_Server (Pandora_Windows_Service *service, string address, string auth_address, unsigned int port);
 			~UDP_Server ();
-            unsigned long getAddress ();
-            unsigned long getAuthAddress ();
-            unsigned long getPort ();
-            Pandora_Windows_Service *getService ();
+			unsigned long getAddress ();
+			unsigned long getAuthAddress ();
+			unsigned long getPort ();
+			Pandora_Windows_Service *getService ();
 			unsigned char isRunning ();
 
 			int start ();
@@ -25,13 +25,13 @@ namespace Pandora {
 
 		private:
 			unsigned long address;
-            unsigned long auth_address;
+			unsigned long auth_address;
 			unsigned long port;
 			unsigned char running;
 			Pandora_Windows_Service *service;
 	};
 
-    void listen (UDP_Server *server);
+	void listen (UDP_Server *server);
 	int process_command (Pandora_Windows_Service *service, char *command);
 }
 
